fix z-index

--- a/styles/main.css
+++ b/styles/main.css
@@ -36,6 +36,7 @@
   align-items: center;
   position: fixed;
   width: 100vw;
+  z-index: 999;
 }
 
 .dance {
